tests/script_errors/lexer_triple_colon/error.txt
Error: 
    1 | #  we can't have triple colons
    2 | a:::b()
      |  ^^^ Found the token `:::` but expected one of `!=`, `%`, `&`, `(`, `)`, `*`, `+`, `,`, `-`, `.`, `.`, `/`, `:`, `::`, `;`, `<`, `<<`, `<=`, `<end-of-stream>`, `=`, `==`, `=>`, `>`, `>=`, `>>`, `>>>`, `[`, `]`, `^`, `aggregate`, `and`, `case`, `default`, `emit`, `end`, `mergein`, `of`, `or`, `when`, `xor`, `}`
      |      NOTE: Did you mean to use `::`?